--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
